--- a/media/assets/css/mapview.css
+++ b/media/assets/css/mapview.css
@@ -165,4 +165,3 @@ img.map-region-icon {
 }
 
 .colorOrange { color: #ffa500; font-size: 1.1em; }
-.mapwindow .preview-container img { min-width: 500px; max-width:  550px !important;}
